SUBDIRS = Scalar Vector Tensor

noinst_LTLIBRARIES = libThePEGVertex.la
libThePEGVertex_la_SOURCES = \
VertexBase.cc VertexBase.h VertexBase.fh \
AbstractFFSVertex.h  AbstractFFSVertex.fh  AbstractFFSVertex.cc  \
AbstractFFVVertex.h  AbstractFFVVertex.fh  AbstractFFVVertex.cc  \
AbstractVVVVertex.h  AbstractVVVVertex.fh  AbstractVVVVertex.cc  \
AbstractSSSVertex.h  AbstractSSSVertex.fh  AbstractSSSVertex.cc  \
AbstractSSSSVertex.h AbstractSSSSVertex.fh AbstractSSSSVertex.cc \
AbstractVSSVertex.h  AbstractVSSVertex.fh  AbstractVSSVertex.cc  \
AbstractFFTVertex.h  AbstractFFTVertex.fh  AbstractFFTVertex.cc  \
AbstractVVTVertex.h  AbstractVVTVertex.fh  AbstractVVTVertex.cc  \
AbstractVVSVertex.h  AbstractVVSVertex.fh  AbstractVVSVertex.cc  \
AbstractSSTVertex.h  AbstractSSTVertex.fh  AbstractSSTVertex.cc  \
AbstractVVSSVertex.h AbstractVVSSVertex.fh AbstractVVSSVertex.cc \
AbstractVVVSVertex.h AbstractVVVSVertex.fh AbstractVVVSVertex.cc \
AbstractFFSTVertex.h AbstractFFSTVertex.fh AbstractFFSTVertex.cc \
AbstractFFVTVertex.h AbstractFFVTVertex.fh AbstractFFVTVertex.cc \
AbstractSSSTVertex.h AbstractSSSTVertex.fh AbstractSSSTVertex.cc \
AbstractVVSTVertex.h AbstractVVSTVertex.fh AbstractVVSTVertex.cc \
AbstractVVVTVertex.h AbstractVVVTVertex.fh AbstractVVVTVertex.cc \
AbstractVVVVVertex.h AbstractVVVVVertex.fh AbstractVVVVVertex.cc \
AbstractRFSVertex.h  AbstractRFSVertex.fh  AbstractRFSVertex.cc  \
AbstractRFVVertex.h  AbstractRFVVertex.fh  AbstractRFVVertex.cc  \
AbstractFFVVVertex.h AbstractFFVVVertex.fh AbstractFFVVVertex.cc \
AbstractFFVSVertex.h AbstractFFVSVertex.fh AbstractFFVSVertex.cc \
AbstractFFSSVertex.h AbstractFFSSVertex.fh AbstractFFSSVertex.cc \
AbstractFFFFVertex.h AbstractFFFFVertex.fh AbstractFFFFVertex.cc \
AbstractRFSSVertex.h AbstractRFSSVertex.fh AbstractRFSSVertex.cc \
AbstractRFVSVertex.h AbstractRFVSVertex.fh AbstractRFVSVertex.cc \
AbstractRFVVVertex.h AbstractRFVVVertex.fh AbstractRFVVVertex.cc
libThePEGVertex_la_LIBADD = Scalar/libThePEGSVertex.la \
	                    Vector/libThePEGVVertex.la \
	                    Tensor/libThePEGTVertex.la
