noinst_LTLIBRARIES = libThePEGWaveFunction.la
libThePEGWaveFunction_la_SOURCES = \
RSSpinorBarWaveFunction.cc RSSpinorBarWaveFunction.h \
RSSpinorWaveFunction.cc RSSpinorWaveFunction.h \
ScalarWaveFunction.h \
SpinorBarWaveFunction.cc SpinorBarWaveFunction.h\
SpinorWaveFunction.cc SpinorWaveFunction.h \
TensorWaveFunction.cc TensorWaveFunction.h \
VectorWaveFunction.cc VectorWaveFunction.h \
WaveFunctionBase.h
